Fix problem with space after scrollbar

--- a/style.css
+++ b/style.css
@@ -28,7 +28,12 @@
 
 html, body {
   height: 100%;
-  overflow-x: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none;
 }
 
 html {
